# hsSDL2

./: .boring  .travis.yml  LICENSE  LICENSE2  MACOSX  README  README.md  SDL.buildinfo.in  SDL.cabal  Setup.lhs  Setup.lhs-macos  TODO  WIN32  WIN32.md  aclocal.m4  configure  configure.ac  default.nix
Examples/MacOSX/: Main.hs  MainRenamed.hs  Makefile  SDLWrapper.hs  Test.hs  mainc.c  wrapper.c
Examples/NeHe/lesson09/: lesson9.sdl.hs
Examples/NeHe/lesson11/: lesson11.hs
Examples/twinklebear/: lession3.hs  lesson1.hs  lesson2.hs  lesson3.hs  lesson4.hs  lesson5.hs
Graphics/UI/: SDL.hs
Graphics/UI/SDL/: Audio.hs  Audio.hsc  AudioSpec.hsc  Bits.hsc  CPUInfo.hs  Clipboard.hsc  Color.hs  Enums.hsc  Error.hsc  Events.hsc  Filesystem.hsc  General.hsc  Hints.hsc  Init.hs  Init.hsc  Joystick.hsc  Keyboard.hsc  Keycode.hsc  Keysym.hsc  Log.hsc  Meta.hsc  Mouse.hsc  Platform.hsc  Power.hsc  RWOps.hs  RWOps.hsc  Raw.hsc  Rect.hsc  Render.hsc  StringUtilities.hs  Surface.hsc  Time.hs  Timer.hsc  Types.hsc  Utilities.hs  Utilities.hsc  Version.hsc  Video.hsc  WindowManagement.hsc
csrc/: sdl_bits.c  sdl_rect.c
doc/: Graphics.UI.SDL.Audio.html  Graphics.UI.SDL.CPUInfo.html  Graphics.UI.SDL.Color.html  Graphics.UI.SDL.Events.html  Graphics.UI.SDL.General.html  Graphics.UI.SDL.Joystick.html  Graphics.UI.SDL.Keysym.html  Graphics.UI.SDL.RWOps.html  Graphics.UI.SDL.Types.html  Graphics.UI.SDL.Video.html  doc-index-A.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index.html
doc/Core/: Graphics.UI.SDL.Rect.html  Graphics.UI.SDL.Time.html  Graphics.UI.SDL.Utilities.html  Graphics.UI.SDL.Version.html  Graphics.UI.SDL.WindowManagement.html  Graphics.UI.SDL.html  doc-index-A.html  doc-index-B.html  doc-index-F.html  doc-index-J.html  doc-index-L.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-S.html  index.html
doc/Image/: Graphics.UI.SDL.Image.Version.html  Graphics.UI.SDL.Image.html  doc-index.html  index.html
doc/Mixer/: Graphics.UI.SDL.Mixer.Channels.html  Graphics.UI.SDL.Mixer.General.html  Graphics.UI.SDL.Mixer.Music.html  Graphics.UI.SDL.Mixer.Samples.html  Graphics.UI.SDL.Mixer.Types.html  Graphics.UI.SDL.Mixer.Version.html  Graphics.UI.SDL.Mixer.html  doc-index-A.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-V.html  doc-index.html  index.html
doc/TTF/: Graphics.UI.SDL.TTF.Attributes.html  Graphics.UI.SDL.TTF.General.html  Graphics.UI.SDL.TTF.Management.html  Graphics.UI.SDL.TTF.Render.html  Graphics.UI.SDL.TTF.Types.html  Graphics.UI.SDL.TTF.Version.html  Graphics.UI.SDL.TTF.html  doc-index.html  index.html
hsSDL-image/: SDL-image.cabal  configure  configure.ac
hsSDL-image/Graphics/UI/SDL/: Image.hsc
hsSDL-image/includes/: HsSDLConfig.h.in
includes/: HsSDLConfig.h.in
src/Core/: SDL.buildinfo.in  SDL.cabal  Setup.lhs  TODO  config.mk.in  configure  configure.ac
src/Core/Examples/: Test.hs
src/Core/Examples/NeHe/lesson06/: BmpLoader.hs
src/Core/Examples/NeHe/lesson08/: lesson8.sdl.hs
src/Core/Examples/lesson02/: Makefile  lesson2.glut.hs  lesson2.sdl.hs
src/Core/Examples/lesson05/: Makefile  lesson5.glut.hs  lesson5.sdl.hs
src/Core/Examples/lesson06/: BmpAux.hs  Fun_Loader.hs  Objects.hs  lesson6.glut.hs  lesson6.sdl.hs
src/Core/Examples/lesson11/: lesson11.hs
src/Core/Graphics/UI/: SDL.hs
src/Core/Graphics/UI/SDL/: Audio.hs  Audio.hsc  Color.hs  Events.hsc  General.hs  General.hsc  Joystick.hsc  Keysym.hsc  RWOps.hs  Rect.hsc  Types.hsc  Utilities.hs  Version.hsc  Video.hsc  WindowManagement.hs  WindowManagement.hsc
src/GFX/: SDL-gfx.cabal  config.mk.in  configure  configure.ac
src/GFX/Graphics/UI/SDL/: Framerate.hs  Primitives.hs  Rotozoomer.hs
src/GFX/includes/: HsSDLConfig.h  HsSDLConfig.h.in
src/Image/: SDL-image.cabal  configure  configure.ac
src/Image/Graphics/UI/SDL/: Image.hs
src/Image/Graphics/UI/SDL/Image/: Version.hsc
src/Mixer/: SDL-mixer.cabal  configure  configure.ac
src/Mixer/Graphics/UI/SDL/: Mixer.hs
src/Mixer/Graphics/UI/SDL/Mixer/: Channels.hs  General.hs  General.hsc  Music.hs  Samples.hs  Types.hs  Version.hsc
src/Mixer/includes/: HsSDLConfig.h
src/TTF/: SDL-ttf.cabal  Setup.lhs  configure  configure.ac
src/TTF/Graphics/UI/SDL/: TTF.hs
src/TTF/Graphics/UI/SDL/TTF/: Attributes.hs  General.hs  Management.hs  Render.hs  Types.hs  Types.hsc  Version.hsc  Wrapper.c  Wrapper.h
src/TTF/includes/: HsSDLConfig.h
