Cabal-Version:      >= 1.6
Name:               SDL
Version:            0.5.10
Maintainer:         Lemmih (lemmih@gmail.com)
Author:             Lemmih (lemmih@gmail.com)
Copyright:          2004-2009, Lemmih
License-File:       LICENSE
License:            BSD3
Build-Type:         Custom
Category:           Foreign binding
Synopsis:           Binding to libSDL
Tested-with:        GHC ==6.6, GHC ==6.8, GHC ==6.10, Hugs ==20050308
Data-files:         README, MACOSX, WIN32
Extra-Source-files: configure, configure.ac, SDL.buildinfo.in, config.mk.in, includes/HsSDLConfig.h.in

Library
  Build-Depends: base < 5
  Extensions: CPP, EmptyDataDecls, ForeignFunctionInterface, MultiParamTypeClasses,
              FunctionalDependencies
  Exposed-Modules:
   Graphics.UI.SDL,
   Graphics.UI.SDL.CPUInfo,
   Graphics.UI.SDL.General,
   Graphics.UI.SDL.Video,
   Graphics.UI.SDL.WindowManagement,
   Graphics.UI.SDL.Audio,
   Graphics.UI.SDL.Events,
   Graphics.UI.SDL.Time,
   Graphics.UI.SDL.Keysym,
   Graphics.UI.SDL.Color,
   Graphics.UI.SDL.RWOps,
   Graphics.UI.SDL.Types,
   Graphics.UI.SDL.Rect,
   Graphics.UI.SDL.Utilities,
   Graphics.UI.SDL.Version,
   Graphics.UI.SDL.Joystick
  Includes: SDL.h
  Extra-Libraries: SDL
  Frameworks: AppKit
  GHC-Options: -Wall

source-repository head
    type:     darcs
    location: http://mirror.seize.it/hsSDL/hssdl/
