Cabal-Version:      >= 1.6
Name:               SDL
Version:            0.6.3
Maintainer:         Lemmih (lemmih@gmail.com)
Author:             Lemmih (lemmih@gmail.com)
Copyright:          2004-2010, Lemmih
License-File:       LICENSE
License:            BSD3
Build-Type:         Custom
Category:           Foreign binding
Synopsis:           Binding to libSDL
Description:
   Simple DirectMedia Layer \(libSDL\) is a cross-platform multimedia
   library designed to provide low level access to audio,
   keyboard, mouse, joystick, 3D hardware via OpenGL, and 2D
   video framebuffer. It is used by MPEG playback software,
   emulators, and many popular games, including the award
   winning Linux port of \"Civilization: Call To Power.\"
Tested-with:        GHC ==6.6, GHC ==6.8, GHC ==6.10, GHC ==6.12.2, Hugs ==20050308
Data-files:         README, MACOSX, WIN32,
                    Examples/MacOSX/Main.hs,
                    Examples/MacOSX/Makefile,
                    Examples/MacOSX/MainWrapper.hs,
                    Examples/MacOSX/mainc.c
Extra-Source-files: configure, configure.ac, SDL.buildinfo.in, config.mk.in, includes/HsSDLConfig.h.in

Library
  Build-Depends: base >= 3 && < 5
  Extensions: CPP, EmptyDataDecls, ForeignFunctionInterface, MultiParamTypeClasses,
              FunctionalDependencies
  Exposed-Modules:
   Graphics.UI.SDL,
   Graphics.UI.SDL.CPUInfo,
   Graphics.UI.SDL.General,
   Graphics.UI.SDL.Video,
   Graphics.UI.SDL.WindowManagement,
   Graphics.UI.SDL.Audio,
   Graphics.UI.SDL.Events,
   Graphics.UI.SDL.Time,
   Graphics.UI.SDL.Keysym,
   Graphics.UI.SDL.Color,
   Graphics.UI.SDL.RWOps,
   Graphics.UI.SDL.Types,
   Graphics.UI.SDL.Rect,
   Graphics.UI.SDL.Utilities,
   Graphics.UI.SDL.Version,
   Graphics.UI.SDL.Joystick
  Includes: SDL.h
  if ! os(darwin)
   Extra-Libraries: SDL
  Frameworks: AppKit
  GHC-Options: -Wall

source-repository head
    type:     darcs
    location: http://mirror.seize.it/hsSDL/hssdl/
