Cabal-Version:      >= 1.6
Name:               SDL2
Version:            0.1.0
Maintainer:         Lemmih (lemmih@gmail.com)
Author:             Lemmih (lemmih@gmail.com)
License-File:       LICENSE
License:            PublicDomain
Build-Type:         Custom
Category:           Foreign binding
Synopsis:           Binding to libSDL
Description:
   Simple DirectMedia Layer \(libSDL\) is a cross-platform multimedia
   library designed to provide low level access to audio,
   keyboard, mouse, joystick, 3D hardware via OpenGL, and 2D
   video framebuffer. It is used by MPEG playback software,
   emulators, and many popular games, including the award
   winning Linux port of \"Civilization: Call To Power.\"
Data-files:         README.md, WIN32.md
Extra-Source-files: configure, configure.ac, SDL.buildinfo.in, config.mk.in, includes/HsSDLConfig.h.in

Library
  CPP-Options: -DSDL_MAIN_HANDLED
  Build-Depends: base >= 3 && < 5, bytestring, text, time, vector
  Extensions: CPP, EmptyDataDecls, ForeignFunctionInterface, MultiParamTypeClasses,
              FunctionalDependencies
  C-Sources: csrc/sdl_bits.c
  Exposed-Modules:
   Graphics.UI.SDL.Audio,
   Graphics.UI.SDL.Clipboard,
   Graphics.UI.SDL.Error,
   Graphics.UI.SDL.Hints,
   Graphics.UI.SDL.Init,
   Graphics.UI.SDL.Log,
   Graphics.UI.SDL.Power,
   Graphics.UI.SDL.Render,
   Graphics.UI.SDL.Surface,

   Graphics.UI.SDL,
   Graphics.UI.SDL.CPUInfo,
   Graphics.UI.SDL.General,
   Graphics.UI.SDL.Video,
   Graphics.UI.SDL.WindowManagement,
   Graphics.UI.SDL.Events,
   Graphics.UI.SDL.Timer,
   Graphics.UI.SDL.Keysym,
   Graphics.UI.SDL.Keycode,
   Graphics.UI.SDL.Color,
   Graphics.UI.SDL.RWOps,
   Graphics.UI.SDL.Types,
   Graphics.UI.SDL.Rect,
   Graphics.UI.SDL.Utilities,
   Graphics.UI.SDL.Version,
   Graphics.UI.SDL.Joystick,
   Graphics.UI.SDL.Platform,
   Graphics.UI.SDL.Bits,
   Graphics.UI.SDL.Mouse
  Other-Modules:
    Graphics.UI.SDL.StringUtilities
  Includes: SDL.h
  if ! os(darwin)
   Extra-Libraries: SDL2
  if os(windows)
   Extra-Libraries: SDL2main
  Frameworks: AppKit
  GHC-Options: -Wall

source-repository head
    type:     git
    location: https://github.com/Lemmih/hsSDL2
