Cabal-Version:      >= 1.6
Name:               SDL2-image
Version:            0.1.0
Maintainer:         Lemmih (lemmih@gmail.com)
Author:             Lemmih (lemmih@gmail.com)
Copyright:          2004-2010, Lemmih
License-File:       LICENSE
License:            PublicDomain
Build-Type:         Custom
Category:           Foreign binding
Synopsis:           Binding to libSDL_image
Description:
  SDL_image is an image file loading library.
  It loads images as SDL surfaces, and supports the
  following formats: BMP, GIF, JPEG, LBM, PCX, PNG,
                     PNM, TGA, TIFF, XCF, XPM, XV.
Extra-Source-Files: configure, includes/HsSDLConfig.h.in, SDL-image.buildinfo.in, config.mk.in
Data-Files:         README.md

Library
  Extensions:       ForeignFunctionInterface
  Build-Depends:    base >= 3 && < 5, SDL2
  Exposed-Modules:
    Graphics.UI.SDL.Image
  Includes:         SDL.h SDL_image.h
  GHC-Options:      -Wall

source-repository head
    type:     darcs
    location: http://mirror.seize.it/hsSDL/hssdl-image/
