Name: SDL-image
Version: 0.4.0
Maintainer: Lemmih (lemmih@gmail.com)
Author: Lemmih (lemmih@gmail.com)
Copyright: 2004-2005, Lemmih
License-File: LICENSE
License: BSD3
Build-Depends: base, SDL
Category: Foreign binding
Synopsis: Binding to libSDL_image
Extensions: ForeignFunctionInterface
Exposed-Modules:
  Graphics.UI.SDL.Image,
  Graphics.UI.SDL.Image.Version
Includes: SDL.h SDL_image.h
GHC-Options: -O2 -fvia-c -Wall -Werror
