Name: SDL-mixer
Version: 0.1.0
Maintainer: Lemmih (lemmih@gmail.com)
Author: Lemmih (lemmih@gmail.com)
Copyright: 2004-2005, Lemmih
License-File: LISENCE
Build-Depends: SDL
Category: Foreign binding
Synopsis: Binding to libSDL_mixer
Extensions: ForeignFunctionInterface
Exposed-Modules:
  Graphics.UI.SDL.Mixer.General,
  Graphics.UI.SDL.Mixer.Samples,
  Graphics.UI.SDL.Mixer.Channels,
  Graphics.UI.SDL.Mixer.Music,
  Graphics.UI.SDL.Mixer.Types
Includes: SDL.h SDL_mixer.h
GHC-Options: -fglasgow-exts -O2 -fvia-c
