Name: SDL-ttf
Version: 0.4.0
Maintainer: Lemmih (lemmih@gmail.com)
Author: Lemmih (lemmih@gmail.com)
Copyright: 2004-2005, Lemmih
License-File: LICENSE
License: BSD3
Build-Depends: SDL
Category: Foreign binding
Synopsis: Binding to libSDL_ttf
Extensions: ForeignFunctionInterface
Exposed-Modules:
  Graphics.UI.SDL.TTF,
  Graphics.UI.SDL.TTF.Version,
  Graphics.UI.SDL.TTF.Types,
  Graphics.UI.SDL.TTF.Render,
  Graphics.UI.SDL.TTF.Management,
  Graphics.UI.SDL.TTF.Attributes,
  Graphics.UI.SDL.TTF.General
C-Sources: Graphics/UI/SDL/TTF/Wrapper.c
Include-Dirs: .
Includes: Graphics/UI/SDL/TTF/Wrapper.h SDL.h SDL_ttf.h
GHC-Options: -fglasgow-exts -O2 -Wall -Werror
